//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  emailVerified DateTime
  password String [not null]
  avatar String
  accounts accounts
  identityProvider IdentityProvider [not null, default: 'EMAIL']
  documents documents [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table avatars {
  avatarId String [unique, not null]
  userId String [unique, not null]
  data String [not null]
}

Table accounts {
  id String [pk]
  userId String [unique, not null]
  refreshToken String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

Table verification_tokens {
  id Int [pk, increment]
  identifier String [not null]
  token String [unique, not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table password_reset_request {
  id String [pk]
  email String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table documents {
  id String [pk]
  title String
  owner users [not null]
  ownerId String [not null]
  content blocks [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table blocks {
  id String [pk]
  document documents [not null]
  documentId String [not null]
  type BlockType [not null]
  content Json [not null]
  nextId String [unique]
  next blocks
  prev blocks
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum IdentityProvider {
  EMAIL
}

Enum BlockType {
  title
  heading1
  heading2
  text
}

Ref: accounts.userId - users.id [delete: Cascade]

Ref: documents.ownerId > users.id

Ref: blocks.documentId > documents.id

Ref: blocks.nextId - blocks.id